@@ -1,3 +1,9 @@
+2002-10-24  Bill Bumgarner  <bbum@codefab.com>
+
+	* Added a number of NS* tests.
+	* "Fixed" a crasher that would happen after the second time a
+	collection class was alloc()'d.
+
 2002-10-23  Bill Bumgarner  <bbum@codefab.com>
 	* Added a test_paths test suite to Foundation.  Tests one function
 	(currently causes a bus error).
